--- a/whaiout.ipynb
+++ b/whaiout.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:94786d3de1efc7ea21790d2d45d80c315562b4eb94a4dd033f568a8ce6d5354d"
+  "signature": "sha256:d68bc5a71d63d67fffee02e4eeb1b15ad5e23dfefbf13c988827e27a29e78f2b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -604,44 +604,13 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "optjz = []"
+      "optjz = []\n",
+      "optjsz = []"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 101
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "for opjw in opjsnz:\n",
-      "    print opjw\n",
-      "    optjsz.append(objw)\n",
-      "    "
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "5e98dfab4326.json\n"
-       ]
-      },
-      {
-       "ename": "NameError",
-       "evalue": "name 'optjsz' is not defined",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-102-4fbf9a4b7e50>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mopjw\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mopjsnz\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[1;32mprint\u001b[0m \u001b[0mopjw\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[0moptjsz\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mobjw\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;31mNameError\u001b[0m: name 'optjsz' is not defined"
-       ]
-      }
-     ],
-     "prompt_number": 102
+     "prompt_number": 121
     },
     {
      "cell_type": "code",
@@ -652,7 +621,21 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 107
+     "prompt_number": 122
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#for opjw in opjsnz:\n",
+      "#    print opjw\n",
+      "#    optjsz.append(objw)\n",
+      "    "
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 124
     },
     {
      "cell_type": "code",
@@ -668,7 +651,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 108
+     "prompt_number": 125
     },
     {
      "cell_type": "code",
@@ -679,7 +662,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 109
+     "prompt_number": 126
     },
     {
      "cell_type": "code",
@@ -690,7 +673,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 110
+     "prompt_number": 127
     },
     {
      "cell_type": "code",
@@ -704,13 +687,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 111,
+       "prompt_number": 128,
        "text": [
         "'{\"signin hrmin\": \"19:11\", \"reason\": \"ESW\", \"name\": \"William Mckee\", \"signin date\": \"21-Oct-2014\", \"signin comment\": \"interested in watching swimmers on way back from walk\"}'"
        ]
       }
      ],
-     "prompt_number": 111
+     "prompt_number": 128
     },
     {
      "cell_type": "code",
@@ -721,7 +704,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 115
+     "prompt_number": 129
     },
     {
      "cell_type": "code",
@@ -735,7 +718,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 117,
+       "prompt_number": 130,
        "text": [
         "[u'19:11',\n",
         " u'ESW',\n",
@@ -745,7 +728,16 @@
        ]
       }
      ],
-     "prompt_number": 117
+     "prompt_number": 130
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 130
     },
     {
      "cell_type": "code",
