--- a/whaiout.ipynb
+++ b/whaiout.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:d0dbb87ed9a53b42b1fe1bc32a2c92b87623351688bff1ecd4be6ccd6702c985"
+  "signature": "sha256:105562dad2842b8e130eb5e8336a86aa343d3bd912f81f6afb0612283f9f0cd7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -37,7 +37,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 61
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -48,7 +48,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 62
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -69,7 +69,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 63
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -80,7 +80,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 64
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -97,18 +97,18 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "20-Oct-2014\n",
-        "07:15\n",
-        "bc157cd38f17cf856e8128f1f66016d226262f014304f678b7ef92de5cdba1199ca0f64eb114ce66502fc7baed9e4dc3e4ee66de8463b71ccbd67d92e5c1576545bbf70e09902b4a50e0a6ea11e1c8437c8e3a8d6ac1b7b0a5c6425b7972f33705914f4ef56176ec9d83158566d96bb4b0c7acd79c17f0b6ec37af470762ff92\n",
+        "27-Oct-2014\n",
+        "23:30\n",
+        "1264df86026e9f362e66bcc0b97aa74bdb4277452392f9c3e0b13af9678237a72515ecd3ba88b3975e3933248f7e94913cd7948213df6e89544db8206871c8bdc23fdf27f3e18e08cfeba51213403e642e20a7dd829ee7411191da0bd3d661e8290148eb95fcb8e440269d0c1997006608686ef50d52641d65e4f9be3b3bab0a\n",
         "William Mckee\n",
         "ESW\n",
-        "26-Oct-2014\n",
-        "21:32\n",
-        "4884366045672d53dab2dc35a4d5e1b00d8b9757509a5dccfac70760f44de81e7b797224e325ddfa36eda2da73517d00f5a925e751448e6aed63eee7c45ce2225e396d182a4e3df3a42031065227a6775abf2eb6279a461b8e1901bbb65cb88bb6cda10f84ff3e7fc574c81a2de19033d4880552e071d5cf18471378076ff8b4\n"
+        "27-Oct-2014\n",
+        "23:30\n",
+        "2d129e75f8d18bb1211c0373e4ca179203ac118a5797f1187fa01aa8df0f317770de7eafc5f350795083b2a2b80502b011baf30c1c8f8ee42b294847e9376d5e923b1f2b6eee7656e7520ffba8ebe95b7b911516677658b04544ebc45cde1c6ca3514a28893a1318569d916066a2f9fc6cc7d7aefc7dfea0dfdbd26c8bd340db\n"
        ]
       }
      ],
-     "prompt_number": 65
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -121,7 +121,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 66
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -137,11 +137,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "comment: testing early morning\n"
+        "comment: chexk\n"
        ]
       }
      ],
-     "prompt_number": 67
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -154,7 +154,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 68
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -167,7 +167,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 69
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -179,7 +179,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 70
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
@@ -190,7 +190,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 71
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -201,7 +201,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 72
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
@@ -212,7 +212,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 73
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
@@ -229,7 +229,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 74
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
@@ -240,7 +240,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 75
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
@@ -251,7 +251,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 76
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
@@ -280,7 +280,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 77
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
@@ -291,7 +291,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 78
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
@@ -302,7 +302,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 79
+     "prompt_number": 19
     },
     {
      "cell_type": "code",
@@ -315,7 +315,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 80
+     "prompt_number": 20
     },
     {
      "cell_type": "code",
