--- a/wain.ipynb
+++ b/wain.ipynb
@@ -1,13 +1,46 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:2d7e0a02aeb0b5f78a0f96dd4ca15eda52dac9c39af3fc7b325f9dd7cf921947"
+  "signature": "sha256:e5e750ab0dcc28ac139feac0ae7589c8b70e5363dd188058804ea73f066693e7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
  "worksheets": [
   {
    "cells": [
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Visitor Sign System\n",
+      "\n",
+      "This script was created as an altenative to a printed spreadsheet that you use a physical pen to write - date, name, reason, time in, time out. \n",
+      "There is a comment book that this could be used to replace also. \n",
+      "Currently people write comments in pen on lined refil. Comments \n",
+      "The script is basic. It saves the time, date, name, reason, and added in comments as an html page and json object. Archieve of past logins are saved.\n",
+      "It is split into two scripts. The first wain or whaxlu is used for the login. \n",
+      "The second script is whaiout which is the logout script. It takes the output of wain or whaxlu and appends logout data - time, date, and comment."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "TODO\n",
+      "\n",
+      "html page of page 100 logins/logouts - append all json as one html\n",
+      "\n",
+      "graph of weekly/day hours and how they chage.\n",
+      "\n",
+      "work out time between login and logout.\n",
+      "\n",
+      "question that you comment on that includes the sketch daily reddit gets drawn. \n",
+      "\n",
+      "fake name encriputiom for kids\n",
+      "\n",
+      "records time when child eats/drinks"
+     ]
+    },
     {
      "cell_type": "code",
      "collapsed": false,
