--- a/wain.ipynb
+++ b/wain.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:4d4ce39b4fb6f205b5aa5dc28a08b43576c2a2f5c2e48a45b992cd76c10a7a2e"
+  "signature": "sha256:8f349eb42bb2591ef1548f3c9937d9003dab7718c9ff0336ec2be533faebca82"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -17,7 +17,8 @@
       "import dominate\n",
       "import sys\n",
       "from dominate.tags import *\n",
-      "import json"
+      "import json\n",
+      "import pandas as pd"
      ],
      "language": "python",
      "metadata": {},
@@ -734,15 +735,17 @@
      "metadata": {},
      "outputs": [
       {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 19,
-       "text": [
-        "'{\"signin-date\": \"15-Nov-2014\", \"reason\": \"portrait drawings\", \"last-name\": \"mckee\", \"signin-hrmin\": \"03:52:53\", \"first-name\": \"william\", \"signin-comment\": \"testing 123\"}'"
+       "ename": "NameError",
+       "evalue": "name 'betdict' is not defined",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-5-eb88bc8862df>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mbetjsn\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdumps\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbetdict\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mbetjsn\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;31mNameError\u001b[0m: name 'betdict' is not defined"
        ]
       }
      ],
-     "prompt_number": 19
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -753,8 +756,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 20
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -766,7 +768,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 21
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -780,13 +782,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 22,
+       "prompt_number": 7,
        "text": [
-        "'{\"signin hrmin\": \"10:27:53\", \"reason\": \"ESW\", \"firstname\": \"William\", \"signin comment\": \"my cough is still bad\", \"lastname\": \"Mckee\", \"signin date\": \"13-Nov-2014\"}'"
+        "'{\"signin hrmin\": \"10:54:23\", \"reason\": \"ESW\", \"firstname\": \"William\", \"signin comment\": \"omg hi\", \"lastname\": \"Mckee\", \"signin date\": \"27-Nov-2014\"}'"
        ]
       }
      ],
-     "prompt_number": 22
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -958,6 +960,433 @@
       }
      ],
      "prompt_number": 26
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "reser = pd.Series(opred)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 10
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "pd.DataFrame(reser)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "PandasError",
+       "evalue": "DataFrame constructor not properly called!",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mPandasError\u001b[0m                               Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-12-edd34ba65abc>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mreser\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[1;32m/usr/lib/pymodules/python2.7/pandas/core/frame.pyc\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, data, index, columns, dtype, copy)\u001b[0m\n\u001b[0;32m    413\u001b[0m                                          copy=copy)\n\u001b[0;32m    414\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 415\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mPandasError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'DataFrame constructor not properly called!'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    416\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    417\u001b[0m         \u001b[0mNDFrame\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmgr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;31mPandasError\u001b[0m: DataFrame constructor not properly called!"
+       ]
+      }
+     ],
+     "prompt_number": 12
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "rezda = []"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 16
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "for res in reser:\n",
+      "    print res\n",
+      "    rezda.append(res)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "{\n",
+        "\"\n",
+        "s\n",
+        "i\n",
+        "g\n",
+        "n\n",
+        "i\n",
+        "n\n",
+        " \n",
+        "h\n",
+        "r\n",
+        "m\n",
+        "i\n",
+        "n\n",
+        "\"\n",
+        ":\n",
+        " \n",
+        "\"\n",
+        "1\n",
+        "0\n",
+        ":\n",
+        "5\n",
+        "4\n",
+        ":\n",
+        "2\n",
+        "3\n",
+        "\"\n",
+        ",\n",
+        " \n",
+        "\"\n",
+        "r\n",
+        "e\n",
+        "a\n",
+        "s\n",
+        "o\n",
+        "n\n",
+        "\"\n",
+        ":\n",
+        " \n",
+        "\"\n",
+        "E\n",
+        "S\n",
+        "W\n",
+        "\"\n",
+        ",\n",
+        " \n",
+        "\"\n",
+        "f\n",
+        "i\n",
+        "r\n",
+        "s\n",
+        "t\n",
+        "n\n",
+        "a\n",
+        "m\n",
+        "e\n",
+        "\"\n",
+        ":\n",
+        " \n",
+        "\"\n",
+        "W\n",
+        "i\n",
+        "l\n",
+        "l\n",
+        "i\n",
+        "a\n",
+        "m\n",
+        "\"\n",
+        ",\n",
+        " \n",
+        "\"\n",
+        "s\n",
+        "i\n",
+        "g\n",
+        "n\n",
+        "i\n",
+        "n\n",
+        " "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "c\n",
+        "o\n",
+        "m\n",
+        "m\n",
+        "e\n",
+        "n\n",
+        "t\n",
+        "\"\n",
+        ":\n",
+        " \n",
+        "\"\n",
+        "o\n",
+        "m\n",
+        "g\n",
+        " \n",
+        "h\n",
+        "i\n",
+        "\"\n",
+        ",\n",
+        " \n",
+        "\"\n",
+        "l\n",
+        "a\n",
+        "s\n",
+        "t\n",
+        "n\n",
+        "a\n",
+        "m\n",
+        "e\n",
+        "\"\n",
+        ":\n",
+        " \n",
+        "\"\n",
+        "M\n",
+        "c\n",
+        "k\n",
+        "e\n",
+        "e\n",
+        "\"\n",
+        ",\n",
+        " \n",
+        "\"\n",
+        "s\n",
+        "i\n",
+        "g\n",
+        "n\n",
+        "i\n",
+        "n\n",
+        " \n",
+        "d\n",
+        "a\n",
+        "t\n",
+        "e\n",
+        "\"\n",
+        ":\n",
+        " \n",
+        "\"\n",
+        "2\n",
+        "7\n",
+        "-\n",
+        "N\n",
+        "o\n",
+        "v\n",
+        "-\n",
+        "2\n",
+        "0\n",
+        "1\n",
+        "4\n",
+        "\"\n",
+        "}\n"
+       ]
+      }
+     ],
+     "prompt_number": 17
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "rezda"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 19,
+       "text": [
+        "['{',\n",
+        " '\"',\n",
+        " 's',\n",
+        " 'i',\n",
+        " 'g',\n",
+        " 'n',\n",
+        " 'i',\n",
+        " 'n',\n",
+        " ' ',\n",
+        " 'h',\n",
+        " 'r',\n",
+        " 'm',\n",
+        " 'i',\n",
+        " 'n',\n",
+        " '\"',\n",
+        " ':',\n",
+        " ' ',\n",
+        " '\"',\n",
+        " '1',\n",
+        " '0',\n",
+        " ':',\n",
+        " '5',\n",
+        " '4',\n",
+        " ':',\n",
+        " '2',\n",
+        " '3',\n",
+        " '\"',\n",
+        " ',',\n",
+        " ' ',\n",
+        " '\"',\n",
+        " 'r',\n",
+        " 'e',\n",
+        " 'a',\n",
+        " 's',\n",
+        " 'o',\n",
+        " 'n',\n",
+        " '\"',\n",
+        " ':',\n",
+        " ' ',\n",
+        " '\"',\n",
+        " 'E',\n",
+        " 'S',\n",
+        " 'W',\n",
+        " '\"',\n",
+        " ',',\n",
+        " ' ',\n",
+        " '\"',\n",
+        " 'f',\n",
+        " 'i',\n",
+        " 'r',\n",
+        " 's',\n",
+        " 't',\n",
+        " 'n',\n",
+        " 'a',\n",
+        " 'm',\n",
+        " 'e',\n",
+        " '\"',\n",
+        " ':',\n",
+        " ' ',\n",
+        " '\"',\n",
+        " 'W',\n",
+        " 'i',\n",
+        " 'l',\n",
+        " 'l',\n",
+        " 'i',\n",
+        " 'a',\n",
+        " 'm',\n",
+        " '\"',\n",
+        " ',',\n",
+        " ' ',\n",
+        " '\"',\n",
+        " 's',\n",
+        " 'i',\n",
+        " 'g',\n",
+        " 'n',\n",
+        " 'i',\n",
+        " 'n',\n",
+        " ' ',\n",
+        " 'c',\n",
+        " 'o',\n",
+        " 'm',\n",
+        " 'm',\n",
+        " 'e',\n",
+        " 'n',\n",
+        " 't',\n",
+        " '\"',\n",
+        " ':',\n",
+        " ' ',\n",
+        " '\"',\n",
+        " 'o',\n",
+        " 'm',\n",
+        " 'g',\n",
+        " ' ',\n",
+        " 'h',\n",
+        " 'i',\n",
+        " '\"',\n",
+        " ',',\n",
+        " ' ',\n",
+        " '\"',\n",
+        " 'l',\n",
+        " 'a',\n",
+        " 's',\n",
+        " 't',\n",
+        " 'n',\n",
+        " 'a',\n",
+        " 'm',\n",
+        " 'e',\n",
+        " '\"',\n",
+        " ':',\n",
+        " ' ',\n",
+        " '\"',\n",
+        " 'M',\n",
+        " 'c',\n",
+        " 'k',\n",
+        " 'e',\n",
+        " 'e',\n",
+        " '\"',\n",
+        " ',',\n",
+        " ' ',\n",
+        " '\"',\n",
+        " 's',\n",
+        " 'i',\n",
+        " 'g',\n",
+        " 'n',\n",
+        " 'i',\n",
+        " 'n',\n",
+        " ' ',\n",
+        " 'd',\n",
+        " 'a',\n",
+        " 't',\n",
+        " 'e',\n",
+        " '\"',\n",
+        " ':',\n",
+        " ' ',\n",
+        " '\"',\n",
+        " '2',\n",
+        " '7',\n",
+        " '-',\n",
+        " 'N',\n",
+        " 'o',\n",
+        " 'v',\n",
+        " '-',\n",
+        " '2',\n",
+        " '0',\n",
+        " '1',\n",
+        " '4',\n",
+        " '\"',\n",
+        " '}']"
+       ]
+      }
+     ],
+     "prompt_number": 19
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "len(rezda)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 22,
+       "text": [
+        "148"
+       ]
+      }
+     ],
+     "prompt_number": 22
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "TypeError",
+       "evalue": "count() takes exactly one argument (0 given)",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-21-a1553bfa0c34>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mrezda\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcount\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[1;31mTypeError\u001b[0m: count() takes exactly one argument (0 given)"
+       ]
+      }
+     ],
+     "prompt_number": 21
     },
     {
      "cell_type": "code",
