--- a/GetsDrawnDotCom.ipynb
+++ b/GetsDrawnDotCom.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:7f11b866ea0d3d0a4a2ee920ba3b7bf7b59eaa53435c2402bd77e08dad37b933"
+  "signature": "sha256:368af90bf793171f8164a1b186891196450ddfd62753d473ccd8c38d4856d738"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -65,7 +65,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 34
+     "prompt_number": 70
     },
     {
      "cell_type": "code",
@@ -76,7 +76,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 35
+     "prompt_number": 71
     },
     {
      "cell_type": "code",
@@ -87,7 +87,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 36
+     "prompt_number": 72
     },
     {
      "cell_type": "code",
@@ -98,7 +98,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 37
+     "prompt_number": 73
     },
     {
      "cell_type": "code",
@@ -109,7 +109,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 38
+     "prompt_number": 74
     },
     {
      "cell_type": "code",
@@ -120,7 +120,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 39
+     "prompt_number": 75
     },
     {
      "cell_type": "code",
@@ -134,7 +134,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 40
+     "prompt_number": 76
     },
     {
      "cell_type": "code",
@@ -145,7 +145,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 41
+     "prompt_number": 77
     },
     {
      "cell_type": "code",
@@ -158,7 +158,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 42
+     "prompt_number": 78
     },
     {
      "cell_type": "code",
@@ -170,7 +170,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 43
+     "prompt_number": 79
     },
     {
      "cell_type": "code",
@@ -181,7 +181,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 44
+     "prompt_number": 80
     },
     {
      "cell_type": "code",
@@ -202,7 +202,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 45
+     "prompt_number": 81
     },
     {
      "cell_type": "code",
@@ -213,7 +213,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 46
+     "prompt_number": 82
     },
     {
      "cell_type": "code",
@@ -224,7 +224,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 47
+     "prompt_number": 83
     },
     {
      "cell_type": "code",
@@ -235,7 +235,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 48
+     "prompt_number": 84
     },
     {
      "cell_type": "code",
@@ -246,7 +246,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 49
+     "prompt_number": 85
     },
     {
      "cell_type": "code",
@@ -259,7 +259,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 50
+     "prompt_number": 86
     },
     {
      "cell_type": "code",
@@ -270,7 +270,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 51
+     "prompt_number": 87
     },
     {
      "cell_type": "code",
@@ -320,7 +320,7 @@
        ]
       }
      ],
-     "prompt_number": 52
+     "prompt_number": 88
     },
     {
      "cell_type": "code",
@@ -332,7 +332,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 53
+     "prompt_number": 89
     },
     {
      "cell_type": "code",
@@ -343,7 +343,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 54
+     "prompt_number": 90
     },
     {
      "cell_type": "code",
@@ -393,7 +393,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 55
+     "prompt_number": 91
     },
     {
      "cell_type": "code",
@@ -407,46 +407,33 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 56,
+       "prompt_number": 92,
        "text": [
-        "{'title': u\"This friend of mine is getting a Bachelor's degree next week, and I was wondering if you could help me turning this photo of her into a nice gift :)\"}"
+        "{'title': u'Can you draw me while performing? :) (not band or professional-related)'}"
        ]
       }
      ],
-     "prompt_number": 56
+     "prompt_number": 92
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "docr = doc.render()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 63
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "docr.decode('ascii', 'ignore')"
+      "doc.render()"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "ename": "UnicodeEncodeError",
-       "evalue": "'ascii' codec can't encode character u'\\xe9' in position 5489: ordinal not in range(128)",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mUnicodeEncodeError\u001b[0m                        Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-64-e28e72344fb8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdocr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'ascii'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'ignore'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-        "\u001b[1;31mUnicodeEncodeError\u001b[0m: 'ascii' codec can't encode character u'\\xe9' in position 5489: ordinal not in range(128)"
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 93,
+       "text": [
+        "u'<!DOCTYPE html>\\n<html>\\n  <head>\\n    <title>GetsDrawn</title>\\n    <link href=\"style.css\" rel=\"stylesheet\"><script src=\"script.js\" type=\"text/javascript\"></script>\\n    <div class=\"header\">\\n      <h1>GetsDrawn</h1>\\n      <p>\\n        <img src=\"imgs/getsdrawn-bw.png\">\\n      </p>\\n      <p>Updated Sat, 13 Dec 2014 10:35:42 +0000</p>\\n      <p>[\\'02-Dec-2014\\', \\'ESW\\', \\'William Mckee\\', \\'15:09\\', \\'sunny and mum is back\\'][\\'02-Dec-2014\\', \\'build wire dibo\\', \\'17:41\\']</p>\\n      <p></p>\\n    </div>\\n  </head>\\n  <body>\\n    <div id=\"body\">\\n      <ol>\\n        <h1>This is my lion man, Leo! I\\'d love if someone took the time to draw my best friend here.</h1>\\n        <p>\\n          <img src=\"http://i.imgur.com/KtmkMtk.jpg\">\\n        </p>\\n        <p>PraiseTalos</p>\\n        <h1>Anyone fancy drawing me as Misty? Feel free to throw a few Pokemon in there too!</h1>\\n        <p>\\n          <img src=\"https://imgur.com/RVQIQdR\">\\n        </p>\\n        <p>chinese-hamster</p>\\n        <h1>Can you draw my dog? Thanks!</h1>\\n        <p>\\n          <img src=\"http://imgur.com/SSQ0uzz\">\\n        </p>\\n        <p>Jjgama</p>\\n        <h1>Draw me?</h1>\\n        <p>\\n          <img src=\"http://i.imgur.com/532MfuG.jpg\">\\n        </p>\\n        <p>maxfortitude</p>\\n        <h1>A picture of my families dog, Baby</h1>\\n        <p>\\n          <img src=\"http://i.imgur.com/4wy9WUZ.jpg\">\\n        </p>\\n        <p>BioWave74</p>\\n        <h1>Please draw my son riding in a swing for the first time :-)</h1>\\n        <p>\\n          <img src=\"http://imgur.com/IECBl1j\">\\n        </p>\\n        <p>Spico0804</p>\\n        <h1>He surprised me with his talents and later became my husband. Still is.</h1>\\n        <p>\\n          <img src=\"http://imgur.com/vxVbw0D\">\\n        </p>\\n        <p>kerlypso</p>\\n        <h1>My nephew was very excited to build Legos with auntie! Would anyone care to capture his vivid expression?</h1>\\n        <p>\\n          <img src=\"http://i.imgur.com/Gb8eTe4.jpg\">\\n        </p>\\n        <p>SpaceFeline</p>\\n        <h1>Can someone draw me and my family?</h1>\\n        <p>\\n          <img src=\"http://imgur.com/ACs8dlq\">\\n        </p>\\n        <p>Steel_Web</p>\\n        <h1>My girlfriend and I would love if you could draw this photo of us at formal.</h1>\\n        <p>\\n          <img src=\"http://i.imgur.com/RFADIjw.jpg\">\\n        </p>\\n        <p>TheBeachWhale</p>\\n        <h1>I\\'m playing around with whether or not I should be growing facial hair</h1>\\n        <p>\\n          <img src=\"http://imgur.com/bsb40tb\">\\n        </p>\\n        <p>tsenaku</p>\\n        <h1>This picture captures our relationship perfectly. I\\'d love to get it drawn for her!</h1>\\n        <p>\\n          <img src=\"http://imgur.com/Gz8wNar\">\\n        </p>\\n        <p>illadelphquarterlife</p>\\n        <h1>Would you care to animate my boyfriend and I?</h1>\\n        <p>\\n          <img src=\"http://imgur.com/a/DZXCc\">\\n        </p>\\n        <p>BossyBlossom</p>\\n        <h1>Picture of my friend &amp;amp; I from prom, use any type of art to recreate this &amp;amp; I will love you forever</h1>\\n        <p>\\n          <img src=\"http://i.imgur.com/uFPKwLf.jpg\">\\n        </p>\\n        <p>UhOhitsBroken</p>\\n        <h1>A dear friend and colleague. Award-winning concert pianist. Anyone want to draw him? Thank you.</h1>\\n        <p>\\n          <img src=\"http://i.imgur.com/sp2gfaK.jpg\">\\n        </p>\\n        <p>HornedFrogPride</p>\\n        <h1>My sister, her husband, and their new puppy visited Santa!</h1>\\n        <p>\\n          <img src=\"http://i.imgur.com/kwCVaHd.jpg\">\\n        </p>\\n        <p>Verittan</p>\\n        <h1>Hi, RGD! Here\\'s a photo of my face - care to draw me?</h1>\\n        <p>\\n          <img src=\"http://i.imgur.com/9Fj2FFR.jpg\">\\n        </p>\\n        <p>kkasket</p>\\n        <h1>My aunt and uncle in the 1960s. I\\'d love to be able to surprise my mom with some art depicting her siblings!</h1>\\n        <p>\\n          <img src=\"http://imgur.com/6mAxfkN.jpg\">\\n        </p>\\n        <p>ms_anne_thropy</p>\\n        <h1>Would you please draw my children playing around Christmas tree for me?</h1>\\n        <p>\\n          <img src=\"http://i.imgur.com/wlFwPPr.jpg\">\\n        </p>\\n        <p>waldenjrs</p>\\n        <h1>I would LOVE to get some help having my friends picture drawn before her wedding!!!! Can someone draw her? She is the one holding the turtle with dreads and terrified look!!!</h1>\\n        <p>\\n          <img src=\"http://i.imgur.com/1yMIGhe.jpg\">\\n        </p>\\n        <p>Jenkma1988</p>\\n        <h1>Anyone care to take a shot at my two favorite people? (My brother and my girlfriend)</h1>\\n        <p>\\n          <img src=\"http://i.imgur.com/8htEOS4.jpg\">\\n        </p>\\n        <p>toohighh</p>\\n        <h1>My best friend and I ~1998, can someone please draw us for a Christmas gift? :)</h1>\\n        <p>\\n          <img src=\"http://imgur.com/SkwODew\">\\n        </p>\\n        <p>samwichsam</p>\\n        <h1>My favorite recent picture of my purple hair. Anyone want to draw me?</h1>\\n        <p>\\n          <img src=\"http://imgur.com/IraYfSd\">\\n        </p>\\n        <p>Vaughnicorn</p>\\n        <h1>I\\'d love to surprise my sister with a print of her and her boyfriend for Christmas!</h1>\\n        <p>\\n          <img src=\"http://imgur.com/vsUFY5a\">\\n        </p>\\n        <p>esiedub</p>\\n        <h1>Can you draw me while performing? :) (not band or professional-related)</h1>\\n        <p>\\n          <img src=\"http://i.imgur.com/BgZXwfj.jpg\">\\n        </p>\\n        <p>va1a</p>\\n      </ol>\\n    </div>\\n    <div class=\"body\">\\n      <p>GetsDrawn is open source</p>\\n      <a>http://github.com/wcmckee/wcmckee</a>\\n    </div>\\n  </body>\\n</html>'"
        ]
       }
      ],
-     "prompt_number": 64
+     "prompt_number": 93
     },
     {
      "cell_type": "code",
@@ -457,7 +444,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 58
+     "prompt_number": 94
     },
     {
      "cell_type": "code",
@@ -469,19 +456,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "ename": "UnicodeEncodeError",
-       "evalue": "'ascii' codec can't encode character u'\\xe9' in position 5489: ordinal not in range(128)",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mUnicodeEncodeError\u001b[0m                        Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-59-0fbb1899da62>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mmkind\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindfil\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'w'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mmkind\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdoc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mmkind\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;31mUnicodeEncodeError\u001b[0m: 'ascii' codec can't encode character u'\\xe9' in position 5489: ordinal not in range(128)"
-       ]
-      }
-     ],
-     "prompt_number": 59
+     "outputs": [],
+     "prompt_number": 95
     },
     {
      "cell_type": "code",
@@ -492,7 +468,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 60
+     "prompt_number": 96
     },
     {
      "cell_type": "code",
@@ -506,13 +482,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 61,
+       "prompt_number": 97,
        "text": [
         "0"
        ]
       }
      ],
-     "prompt_number": 61
+     "prompt_number": 97
     },
     {
      "cell_type": "code",
